Introduced Hotwired Turbo for anchors <a>

--- a/qute/src/main/resources/templates/ItemResource/items.html
+++ b/qute/src/main/resources/templates/ItemResource/items.html
@@ -20,6 +20,7 @@
                 font-size: 2vw;
             }
         </style>
+        <script src="/webjars/hotwired__turbo/7.1.0/dist/turbo.es2017-umd.js"></script>
         <title>List of {items.size()} Items</title>
     </head>
     <body>
