Added link to go back to all items page

--- a/qute/src/main/resources/templates/ItemResource/item.html
+++ b/qute/src/main/resources/templates/ItemResource/item.html
@@ -25,5 +25,6 @@
     <body>
         <h1>Product <b>{item.name}</b></h1>
         <div>Price: {item.price}</div>
+        <a href="/item/">< All items list</a>
     </body>
 </html>
